--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 GLOBAL_LLM_SERVICE="AzureOpenAI"
 
 # Only Used For Running Samples Using GitHub Models 
-GITHUB_TOKEN="..."
+GITHUB_TOKEN="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"
 
 # For Running Samples Using Azure AI Agent Service 
 PROJECT_ENDPOINT="..."
